--- a/P_Legrand/CR Intervention/New intervention/Global Grid/global-title.html
+++ b/P_Legrand/CR Intervention/New intervention/Global Grid/global-title.html
@@ -10,13 +10,13 @@
 									<h1 class = "panel-title"><i class="fa fa-info-circle fa-lg" aria-hidden="true"></i>&nbsp;&nbsp; ${i18n('panel_title_global_id', 'Global Informations - GDC')}</h1>
 								</td>
 								<td style="text-align: right">
-									<a href="#issue"> <button id="btn_anchor"  type="button" class="gwt-Button rmpButton" style="direction: ltr;">${i18n('buttom_back', 'Go to Issue')}</button> </a>
+									<a href="#issue"> <button id="btn_anchor1"  type="button" class="btn btn-default" style="direction: ltr; display: none" >${i18n('buttom_back', 'Go to Issue')}</button> </a>
 								</td>
 								<td style="text-align: right">
-									<a href="#intervention"> <button id="btn_anchor"  type="button" class="gwt-Button rmpButton displayme_${has_right('452558')=='true' || has_right('452695')=='true' || has_right('452593')=='true'} " style="direction: ltr;">${i18n('buttom_back', 'Go to Intervention')}</button> </a>
+									<a href="#intervention"> <button id="btn_anchor2"  type="button" class="btn btn-default displayme_${has_right('452558')=='true' || has_right('452695')=='true' || has_right('452593')=='true'} " style="direction: ltr; display: none">${i18n('buttom_back', 'Go to Intervention')}</button> </a>
 								</td>
 								<td style="text-align: right">
-									<a href="#closure"> <button id="btn_anchor" type="button" class="gwt-Button rmpButton displayme_${has_right('452558')=='true' || has_right('452695')=='true'} " style="direction: ltr;">${i18n('buttom_back', 'Go to Closure')}</button> </a>
+									<a href="#closure"> <button id="btn_anchor3" type="button" class="btn btn-default displayme_${has_right('452558')=='true' || has_right('452695')=='true'} " style="direction: ltr; display: none" >${i18n('buttom_back', 'Go to Closure')}</button> </a>
 								</td>
 							</tr>
 						</table>
@@ -25,15 +25,3 @@
 		</div>
 	</div>
 </div>
-
-
-// 452558  => LEGRAND - Designers
-
-// 452637  => LEGRAND - Users
-// 453483  => LEGRAND - Legrand Desk
-// 452593  => LEGRAND - Onsite Engineers
-// 452638  => LEGRAND - FJ Country Desk
-// 452695  => LEGRAND - FJ GDC
-// 453117  => LEGRAND - FJ SDMO
-// 454989 => LEGRAND - FJ PSE
-//454990 => LEGRAND - Observers
